fix bug that pushes toggle button out of screen on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,17 +17,24 @@ $display-msg-transition: 700ms;
   flex-direction: column;
 }
 
+.flex {
+  display: flex;
+}
+
 .title {
   background-color: $title-color;
   text-align: center;
   padding: 0.75em;
 }
 
+.form-container {
+  padding: 0.77em;
+  background-color: $form-area-color;
+}
+
 .form {
   display: flex;
-  padding: 0.77em;
   justify-content: space-between;
-  background-color: $form-area-color;
   &__input-box {
     width: 12.5em;
     border-radius: 5px;
@@ -46,7 +53,8 @@ $display-msg-transition: 700ms;
   transform: scale(0.75);
   transition: $display-msg-transition;
   height: 1em;
-  margin-top: .4em;
+  margin-top: 0.4em;
+  white-space: nowrap;
   &--error {
     color: $color-F;
   }
